Update all the external packages

--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "Golyshev Dmitrii <golyshev.dmitry@yandex.ru>"
   ],
   "dependencies": {
-    "lodash-node": "3.3.1",
-    "mongodb": "1.4.33"
+    "lodash-node": "^3.10.0",
+    "mongodb": "^2.0.35"
   },
   "description": "mongodb connection daemonizer",
   "devDependencies": {
-    "gulp": "3.8.11",
-    "glob": "5.0.0",
-    "gulp-one-guide": "0.2.0",
-    "gulp-mocha": "2.0.0",
-    "gulp-istanbul": "0.6.0",
-    "gulp-util": "3.0.4"
+    "gulp": "^3.9.0",
+    "glob": "^5.0.0",
+    "gulp-one-guide": "^0.2.0",
+    "gulp-mocha": "^2.1.2",
+    "gulp-istanbul": "^0.10.0",
+    "gulp-util": "^3.0.6"
   },
   "license": "MIT",
   "main": "lib/daemon",
